<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dummy_string"></string>
    <string name="score_string">0</string>
    <string name="ad_unit_id">ca-app-pub-4851983510692337/1193728808</string>

    <!-- Main activity -->
    <string name="app_name">One Button Larry</string>
    <string name="action_settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="play">Play</string>
    <string name="high_score">High Score</string>
    <string name="exit">Exit</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_high_score">Your High Score is:</string>
    <string name="title_activity_game">GameActivity</string>

    <!-- Result activity -->
    <string name="title_activity_result">Your score:</string>
    <string name="namein_score_dialog">Insert your nickname:</string>
    <string name="puntuacion_score_dialog">Your score:</string>
    <string name="def_puntuacion_score_dialog">0000</string>
    <string name="edittext_player_hinttext">NONAME</string>
    <string name="submit_score_dialog">Submit</string>

    <!-- About Us -->
    <string name="about_text">"Game created by Javier Ossorio, Lorenzo Delgado y Carlos Molina, for SCBIO. ETSIT UPV 2014</string>
    <string name="title_activity_about">About Us</string>

</resources>
