<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/toggleSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:checked="true"
        android:text="@string/sound" />

    <ImageView
        android:id="@+id/imageWaitingLarry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sound"
        android:src="@drawable/larry_waiting_animation"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageDancingLarry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sound"
        android:src="@drawable/larry_dance_animation"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/titleImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sound"
        android:maxHeight="130dp"
        android:maxWidth="130dp"
        android:src="@drawable/onebuttonlarry_title" />

    <LinearLayout
        android:id="@+id/linearRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startAboutUs"
            android:text="@string/about_us" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickExit"
            android:text="@string/exit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickGame"
            android:text="@string/play" />

        <Button
            android:id="@+id/buttonHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score" />
    </LinearLayout>

</RelativeLayout>